# regtool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sourceme.sh
examples/: uart.hjson  uart.rdl  uart_with_access.hjson  uart_with_array.hjson
examples/uart_output/: uart_reg_block.sv  uart_reg_pkg.sv  uart_registers.html  uart_registers.md  uart_regs.h
src/regtool/: __init__.py  cli.py
src/regtool/generators/: base.py  doc.py  header.py  rtl.py  template_handler.py  uvm.py
src/regtool/parser/: __init__.py  base.py  hjson_parser.py  rdl_parser.py  reg_model.py
src/regtool/templates/c/: regs.h.tpl
src/regtool/templates/doc/: registers.html.tpl  registers.md.tpl
src/regtool/templates/sv/: reg_block.sv.tpl
src/regtool/templates/uvm/: reg_pkg.sv.tpl
templates/sv/: reg_block.sv.tpl
templates/uvm/: reg_pkg.sv.tpl
tests/: __init__.py
tests/fixtures/: uart.hjson
tests/test_generators/: __init__.py  test_doc.py  test_header.py  test_rtl.py  test_uvm.py
tests/test_parser/: __init__.py  test_hjson_parser.py  test_reg_model.py
