[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regtool"
version = "0.1.0"
description = "Register generation tool for hardware designs"
requires-python = ">=3.7"
dependencies = [
    "hjson",
    "mako",
]

[project.scripts]
reggen = "regtool.reggen:main"
